# src/swagger.yml
@@ -161,3 +161,20 @@ paths:
                 type: string
               planDetails:
                 $ref: '#/definitions/PricePlanDetails'
+  /price-plans/view-details/{plan_id}:
+    get:
+      operationId: controller.price_plan_comparator_controller.view_plan_details
+      tags:
+      - View Plan Details
+      summary: View plan details like supplier name, unit rate and multiplier rates
+      parameters:
+      - name: plan_id
+        in: path
+        required: True
+        description: A string value like "price-plan-0"
+        type: string        
+      responses:
+        200:
+          description: Successful recommend operation
+          schema:
+            $ref: '#/definitions/PricePlanDetails'
